--- a/fuzzy/shop/templates/forms/order_confirm.html
+++ b/fuzzy/shop/templates/forms/order_confirm.html
@@ -13,6 +13,13 @@
 {% block extracss %}
 <style type="text/css">
 
+#address {
+  margin: 20px 0 0;
+  border-top: 1px dashed #fff;
+  border-bottom: 1px dashed #fff;
+  padding: 20px 0;   
+}
+
 #address p.address {
   margin: 0;   
 }
@@ -28,6 +35,10 @@
 
 #payment {
   margin: 20px 0 0;   
+}
+
+.stripe-button-el {
+  font-size: 22px;   
 }
 
 </style>
@@ -111,12 +122,17 @@
 		   </table>
 	</div>
 
-	<div id="address" class="pure-u-1-3">
+	<div id="address" class="pure-u-2-3">
         <p class="address">
             {% with order.address as address %}
-              <strong>{{ order.shopper.user.first_name }} {{ order.shopper.user.last_name }}</strong>
-                {{ order.shopper.user.email }}
+              <strong>{{ order.shopper.user.first_name }} {{ order.shopper.user.last_name }}</strong><br/>
+                {{ order.shopper.user.email }}<br/>
+                
+                {% if order.will_collect %}
+                <p>You've asked to collect the order yourself. There's no postage charge, and we'll let you know by email when your order is ready to collect.</p>
+                {% else %}
                 {% include "snippets/address.html" %}
+                {% endif %}
             {% endwith %}
         </p>
   	</div>
@@ -129,11 +145,11 @@
   <script
     src="https://checkout.stripe.com/v2/checkout.js" 
     class="stripe-button"
-    data-key="{{ stripe_api_key }}"
+    data-key="{{ stripe_api_public_key }}"
     data-amount="{{ stripe_total_price|floatformat:'0' }}"
     data-name="{{ site_name }}"
     data-description="{{ currency.symbol }}{{ total_price|floatformat:'-2' }}"
-    {% thumbnail shopsettings.logo "128x128" crop="" as im %}
+    {% thumbnail shopsettings.logo "128x128" crop="left" format="PNG" as im %}
     data-image="{{ im.url }}"
     {% endthumbnail %}>
   </script>
@@ -146,7 +162,7 @@
 
     <div class="info pure-u-1-3">
         <h3>{% trans 'Safe and secure payment' %}</h3>
-      	<p>{% trans 'We accept all major credit and debit cards through Paypal' %}</p>
+      	<p>{% trans 'We accept all major credit and debit cards' %}</p>
       	<div style="margin: 10px 0 0 0;background-image: url('/static/images/logo16.jpg');background-position: 0px -33px; height: 52px; width: 202px;"></div>
     </div>
     
