--- a/fuzzy/shop/templates/page.html
+++ b/fuzzy/shop/templates/page.html
@@ -50,7 +50,8 @@ $(function() {
     <div class="pure-g-r">
         <div class="box pure-u-11-12 white">
             <div class="inner">
-                something here
+                <h3>Who are FuzzyMoose?</h3>
+                <p>We love chocolates. We love puddings. We just couldn’t get enough of our favourites, so we tried to combine a classic chocolate ganache with our all time obsession: Christmas puddings. The chocolate pudding truffle was born. <strong>Best. Invention. Ever.</strong></p>
             </div>
         </div>
         
