--- a/fuzzy/shop/templates/order_complete.html
+++ b/fuzzy/shop/templates/order_complete.html
@@ -16,30 +16,19 @@
 <div class="pure-g-r">
   	
   	<h1 class="pure-u-1-2">Order complete</h1>
-  	<ul id="steps" class="pure-u-1-2">
-		<li>
-			<a class="completed" href="{% url 'basket' %}">1. Your basket</a>
-		</li>
-		<li>
-			<a class="completed" href="{% url 'order_step_one' %}">2. Your details</a>
-		</li>
-		<li>
-			<a href="" class="completed">3. Confirm and pay</a>
-		</li>
-	</ul>
 
 </div>
    
 <div class="pure-g-r">
 
     <div class="pure-u-1">
-    <p class="introduction">{% trans "We've received your order and we'll send your tea immediately. We've also sent you an email confirming the details. Thank you and we really hope you enjoy your tea!" %}</p>
+    <p class="introduction">{% trans "We've received your order and payment successfully. We've also sent you an email confirming the details. Thank you!" %}</p>
 
 
     <p>{% trans "Please note, we must confirm payment is received before we can ship any orders. If there is a problem with your order, we will contact you immediately to resolve this. Many thanks for your patience." %}</p>
     
     
-    <p>{% blocktrans %}If for any reason you need to contact us about your order, email us at <a href="mailto:chris@minrivertea.com">chris@minrivertea.com</a>. We try to respond to emails as soon as possible, but sometimes because of time zone differences, we might take slightly longer. Thanks for your patience!{% endblocktrans %}</p>
+    <p>{% blocktrans %}If for any reason you need to contact us, email us at <a href="mailto:{{ contact_email }}">{{ contact_email }}</a> and quote your order ID ({{ order.order_id }}). Thanks for your patience!{% endblocktrans %}</p>
 
     </div>
     
