--- a/fuzzy/shop/templates/forms/order_step_one.html
+++ b/fuzzy/shop/templates/forms/order_step_one.html
@@ -88,7 +88,7 @@ $(document).ready( function() {
             <p id="collect">
                 <input type="checkbox" name="will_collect" id="id_will_collect"/>
                 <label>I'll collect the order myself</label>
-                <span class="help">If you check this box, we'll prepare your order and email you with our address and let you know when it's ready. We're based in XXXX.</span>
+                <span class="help">If you check this box we'll prepare your order and e-mail you to arrange a time and place for collection when it's ready. We're based in South London.</span>
             </p>
             
            <div id="address"> 
