--- a/fuzzy/shop/templates/product.html
+++ b/fuzzy/shop/templates/product.html
@@ -305,8 +305,10 @@ $(document).ready( function() {
     <div class="pure-g-r">
         <div class="box pure-u-11-12 white">
             <div class="inner ">
-                <h3>Safe payments</h3>
-                <p>Cras id lorem a tortor laoreet tristique non sit amet ipsum. Curabitur ac velit non nisi dignissim interdum. Donec non mauris ac erat euismod porta in sit amet nulla.</p>
+                <h3>Safe and secure payments</h3>
+                <p>We accept all major credit and debit cards, protected by industry standard encryption.</p>
+                <img class="cards" style="height: 24px;" src="{% static 'images/cards.png' %}" />
+                <img class="cards"  style="height: 24px;" src="{% static 'images/stripe.png' %}" />
             </div>
         </div>
         
