--- a/fuzzy/shop/templates/forms/order_confirm.html
+++ b/fuzzy/shop/templates/forms/order_confirm.html
@@ -1,5 +1,5 @@
 {% extends base_template %}
-{% load thumbnail i18n %}
+{% load thumbnail i18n staticfiles %}
 
 {% block pagetitle %}{% trans 'Order (Step 3 of 4) - Confirm Order' %}{% endblock %}
 
@@ -38,7 +38,22 @@
 }
 
 .stripe-button-el {
-  font-size: 22px;   
+  font-size: 22px;
+  float: right;   
+}
+
+#payment .stripe-button-el span {
+  font-size: 18px;
+  height: 35px;
+  padding: 4px 20px 0;  
+}
+
+#bottom {
+  margin: 30px 0 0;   
+}
+
+.info h3 {
+  margin: 0 0 5px 0;   
 }
 
 </style>
@@ -139,7 +154,7 @@
 
     
 
-<form action="" method="POST" class="pure-u-1" id="payment">
+<form action="" method="POST" class="pure-u-2-3" id="payment">
   {% csrf_token %}
   
   <script
@@ -148,13 +163,14 @@
     data-key="{{ stripe_api_public_key }}"
     data-amount="{{ stripe_total_price|floatformat:'0' }}"
     data-name="{{ site_name }}"
-    data-description="{{ currency.symbol }}{{ total_price|floatformat:'-2' }}"
+    data-description="Pay {{ currency.symbol }}{{ total_price|floatformat:'2' }}"
     data-currency="{{ currency.code }}"
     data-label="Checkout Now!"
     {% thumbnail shopsettings.logo "128x128" crop="left" format="PNG" as im %}
     data-image="{{ im.url }}"
     {% endthumbnail %}>
   </script>
+  
 </form>
 
     
@@ -165,6 +181,8 @@
     <div class="info pure-u-1-3">
         <h3>{% trans 'Safe and secure payment' %}</h3>
       	<p>{% trans 'We accept all major credit and debit cards' %}</p>
+      	<img src="{% static 'images/cards.png' %}" />
+      	<a href="http://www.stripe.com"><img src="{% static 'images/stripe.png' %}"/></a>
       	<div style="margin: 10px 0 0 0;background-image: url('/static/images/logo16.jpg');background-position: 0px -33px; height: 52px; width: 202px;"></div>
     </div>
     
