--- a/fuzzy/shop/templates/home.html
+++ b/fuzzy/shop/templates/home.html
@@ -58,6 +58,81 @@ $('.info.tea a.button').click( function() {
 {% block content %}
 
 
+<div id="main" class="pure-g-r">
+    <div class="pure-u-1">
+        
+        <div id="intro">
+            {% if shopsettings.homepage_mugshot %}
+                {% thumbnail shopsettings.homepage_mugshot "90x120" crop="center" as im %}
+                    <img id="mugshot" src="{{ im.url }}" />  
+                {% endthumbnail %}
+            {% endif %}      
+            {{ shopsettings.homepage_top_text|safe }}
+            <ul>
+                <li>1. <span>Order your truffles</span></li>
+                <li>2. <span>We make fresh to order and deliver</span></li>
+                <li>3. <span>Eat your delicious truffles</span></li>
+            </ul>
+            
+        </div>
+        
+        <div class="hr"></div>
+        
+        <!-- START PRODUCTS -->
+        <div class="pure-g" id="products">
+            {% for x in featured_products %}
+            <div class="pure-u-1-3 product">
+                <a href="{{ x.get_absolute_url }}"><span class="link"></span></a>
+                <div class="inner">
+                    {% thumbnail x.get_main_photo.image "300x240" crop="" as im %}
+                    <img src="{{ im.url }}" />
+                    {% endthumbnail %}
+                    <h3>{{ x.name }}</h3>
+                    <p>{{ x.short_description|striptags }}</p>
+                    
+                    {% if x.price %}
+                    <div class="pricebar">
+                    <span class="price">
+                        from
+                        <span class="number">{{ currency.symbol }}{{ x.price.price }}</span>
+                    </span>
+                    <a href="" class="button">Order now</a>
+                    </div>
+                    {% endif %}
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        <!-- END PRODUCTS -->
+        
+        <div class="hr"></div>
+        
+        <div class="pure-g" id="banner">
+            <div class="pure-u-1 inner">
+                {{ shopsettings.homepage_big_text|safe }}
+            </div>
+        </div>
+        <!-- END BANNER -->
+        
+        <div class="hr"></div>
+        
+        <div id="photo-banner" class="pure-g">
+          <div class="pure-u-1">
+            {% thumbnail shopsettings.homepage_image "900x350" crop="center" as im %}
+                <img src="{{ im.url }}" />
+            {% endthumbnail %}
+            <div class="text">
+                {{ shopsettings.homepage_image_text|safe }}
+            </div>
+          </div>
+        </div>
+
+    </div>
+  </div>
+  <!-- END MAIN -->
+        
+
+
 	
 	    {% if ga_is_on %}
 		<ul class="rss {% if page.feature_image %}opaque{% endif %}">
