updates for mixed box

--- a/fuzzy/shop/templates/product.html
+++ b/fuzzy/shop/templates/product.html
@@ -277,6 +277,10 @@ $(document).ready( function() {
   width: 100%;   
 }
 
+#choices label {
+  width: 95%;   
+}
+
 #choices label.disabled {
   opacity: 0.6; 
   color: #999;  
