--- a/fuzzy/shop/templates/product.html
+++ b/fuzzy/shop/templates/product.html
@@ -272,7 +272,7 @@ $(document).ready( function() {
 #choices ul {
   list-style-type: none;
   padding: 0;
-  margin: 0 0 15px 0;
+  margin: 15px 0;
   float: left;
   width: 100%;   
 }
