--- a/fuzzy/shop/templates/product.html
+++ b/fuzzy/shop/templates/product.html
@@ -159,7 +159,7 @@ $(document).ready( function() {
 }
 
 #description p {
-  margin: 0;   
+  margin: 0 0 15px;   
 }
 
 #prices {
@@ -272,7 +272,7 @@ $(document).ready( function() {
 #choices ul {
   list-style-type: none;
   padding: 0;
-  margin: 15px 0;
+  margin: 0px 0 15px;
   float: left;
   width: 100%;   
 }
